Projet GL/test/src/test/deca/syntax/invalid/bad_print.res
src/test/deca/syntax/invalid/bad_print.deca:11:12: no viable alternative at input 'b'
